# observabilipy

./: CHANGELOG.md  CLAUDE.md  Makefile  README.md  ROADMAP.md  pyproject.toml
.beads/: issues.jsonl
.github/workflows/: ci.yml
.hypothesis/constants/: 004ea2c2f7610ae0  03d5c55b7b41f98e  04f99fbc622c303e  0a5fdc991a18d7cd  0d48d70b866ee84c  138d3fdde1c48af7  15e44fa3fa9f2f44  17c8bf92c6ae048e  18ef5bad0ef40027  1ed429980ca9e741  1fd29bfca222ad47  23104e591a15cec2  26a3deb949fc2a1f  29531c7653b187e2  2bf43b02c535a0d1  2dd5616c10813de3  315ce5a20947dc69  38cd769d80d77410  3f591cbc2ac308bf  41b5e0a8b77cfe06  42c1ac31e8ae040c  447350ff97e13d7c  449c082ce0ef16d9  4c2fbe4707187ff8  4e72ab034ae2b097  56d61764751c6b95  57176cc853cdb3f3  58dca462ef87cfd2  5b28a70b499d37b0  60094de69275c19e  60d3d77df48a93ac  614c3e2439f1f789  6388d3afbebfcca8  66119d192a8f7f14  678d9c088a209a11  6bece7bb8c7e5751  7004db2d44a94512  711b6b78603e6f30  71bd04ea5a284c7f  729c498d40f879bd  (+33 more)
examples/: cgroups_example.py  dashboard_app.py  dashboard_example.py  dashboard_metrics.py  django_example.py  embedded_runtime_example.py  fastapi_example.py  minimal_example.py  sqlite_example.py
src/observabilipy/: __init__.py
src/observabilipy/adapters/: events.py  logging.py  logging_context.py
src/observabilipy/adapters/frameworks/: asgi.py  query_params.py  wsgi.py
src/observabilipy/adapters/storage/: __init__.py  async_utils.py  in_memory.py  ring_buffer.py  sqlite.py  sqlite_base.py  sqlite_logs.py  sqlite_metrics.py
src/observabilipy/core/: instrument.py  logs.py  metrics.py  ports.py
src/observabilipy/core/events/: __init__.py  registry.py
src/observability/adapters/frameworks/: fastapi.py
src/observability/adapters/storage/: __init__.py  in_memory.py  ring_buffer.py  sqlite.py
src/observability/core/: models.py  ports.py
src/observability/core/encoding/: __init__.py  ndjson.py  prometheus.py
tests/: conftest.py
tests/e2e/: conftest.py  test_concurrency.py  test_persistence.py
tests/features/events/: conftest.py  event_descriptors.feature  event_recording.feature  event_validation.feature  test_events.py
tests/features/middleware/: conftest.py  context_propagation.feature  error_handling.feature  middleware_configuration.feature  request_logging.feature  request_metrics.feature  steps_background.py  steps_config.py  steps_context.py  steps_fixtures.py  steps_helpers.py  steps_logging.py  steps_metrics.py  steps_wsgi_error.py  test_middleware_bdd.py  wsgi_middleware.feature
tests/integration/: test_asgi_adapter.py  test_asgi_error_handling.py  test_asgi_logs_endpoint.py  test_asgi_metrics_endpoint.py  test_asgi_middleware_counter.py  test_asgi_middleware_custom_header.py  test_asgi_middleware_exclude_paths.py  test_asgi_middleware_histogram.py  test_asgi_middleware_log_config.py  test_asgi_middleware_log_levels.py  test_asgi_middleware_logging.py  test_asgi_middleware_metric_names.py  test_asgi_middleware_metrics_config.py  test_asgi_middleware_request_id.py  test_asgi_middleware_timing.py  test_django_adapter.py  test_examples.py  test_fastapi_adapter.py  test_middleware_log_context.py  test_sqlite_log_storage.py  test_sqlite_metrics_storage.py  test_sqlite_storage.py  test_sqlite_storage_sync.py  test_wsgi_adapter.py
tests/unit/: test_asgi_middleware.py  test_asgi_middleware_core.py  test_asgi_query_helpers.py  test_asgi_response_helpers.py  test_async_sync.py  test_in_memory_storage.py  test_logs.py  test_metrics.py  test_models.py  test_ndjson_encoder.py  test_observabilipy_handler.py  test_ports.py  test_prometheus_encoder.py  test_ring_buffer_storage.py  test_sqlite_connection_managers.py
tests/unit/events/: test_event_observability.py  test_registry.py
